@@ -10,6 +10,8 @@ Source:         %{name}-%{version}.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root
 
 Requires:	flumotion >= 0.4.0
+Requires:       gstreamer-fluendo-flvmux
+Requires:       gstreamer-fluendo-vp6enc
 
 BuildRequires:	gettext
 BuildRequires:	python >= 2.3
@@ -43,6 +45,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/flumotion
 
 %changelog
+* Fri Mar 21 2008 Thomas Vander Stichele <thomas at apestaart dot org>
+- adding dependencies for muxer and encoder
+
 * Wed Feb  7 2007 Michael Smith <msmith@fluendo.com>
 - updated requirements to flumotion 0.4.0
 * Fri Oct  7 2005 Julien Moutte <julien at fluendo dot com>
